--- a/index.html
+++ b/index.html
@@ -1,48 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NFT Card preview</title>
     <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="src/css/style.css">
 </head>
 
 <body>
     <section>
         <div class="container">
             <div class="container-img">
-                <img src="images/image-equilibrium.jpg" alt="">
+                <img src="src/images/image-equilibrium.jpg" alt="">
             </div>
-
             <div class="description">
                 <h1>Equilibrium #3429</h1>
-
                 <p>Our Equilibrium collection promotes balance and calm</p>
             </div>
-
             <div class="items-content">
                 <div class="item">
-                    <img src="images/icon-ethereum.svg" alt="" width="15px">
+                    <img src="src/images/icon-ethereum.svg" alt="" width="15px">
                     <h1>0.04 ETH</h1>
                 </div>
                 <div class="time">
-                    <img src="images/icon-clock.svg" alt="">
+                    <img src="src/images/icon-clock.svg" alt="">
                     <h1>3 days left</h1>
                 </div>
             </div>
-
             <div class="line"></div>
-
             <div class="credits">
-                <img src="images/image-avatar.png" alt="">
+                <img src="src/images/image-avatar.png" alt="">
                 <h1>Creation of <span>Jules Wyvern</span></h1>
             </div>
         </div>
     </section>
-
 </body>
-
 </html>
